# apollo_perception

./: Doxyfile  README.md
apollo_msgs/apollo_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_calibration_republish_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_canbus_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_canbus_msgs/msg/: BasicInfo.msg  Battery.msg  Brake.msg  CANCardBrand.msg  CANCardParameter.msg  CANCardType.msg  CANChannelId.msg  CanbusConf.msg  Chassis.msg  ChassisDetail.msg  ChassisDetailType.msg  CheckResponseSignal.msg  Deceleration.msg  DrivingMode.msg  Ems.msg  EmsType.msg  Epb.msg  Eps.msg  ErrorCode.msg  Esp.msg  Gas.msg  Gear.msg  GearPosition.msg  License.msg  Light.msg  Safety.msg  VehicleParameter.msg  VehicleParameterVehicleBrand.msg  VehicleSpd.msg
apollo_msgs/modules_common_adapters_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_common_adapters_msgs/msg/: AdapterConfig.msg  AdapterConfigMessageType.msg  AdapterConfigMode.msg  AdapterManagerConfig.msg
apollo_msgs/modules_common_configs_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_common_configs_msgs/msg/: Extrinsics.msg  Transform.msg  VehicleConfig.msg  VehicleParam.msg
apollo_msgs/modules_common_monitor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_common_monitor_msgs/msg/: MonitorMessage.msg  MonitorMessageItem.msg  MonitorMessageItemLogLevel.msg  MonitorMessageItemMessageSource.msg
apollo_msgs/modules_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_common_msgs/msg/: ErrorCode.msg  GnssStatus.msg  Header.msg  InsStatus.msg  PathPoint.msg  Point2D.msg  Point3D.msg  PointENU.msg  PointLLH.msg  Quaternion.msg  ReadMe.md  SoundRequest.msg  SpeedPoint.msg  StatusPb.msg  StreamStatus.msg  TrajectoryPoint.msg  TurnSignal.msg  VehicleSignal.msg
apollo_msgs/modules_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_control_msgs/msg/: ControlCalibrationInfo.msg  ControlCalibrationTable.msg  ControlCommand.msg  ControlConf.msg  ControllerType.msg  Debug.msg  DrivingAction.msg  FilterConf.msg  InputDebug.msg  LatControllerConf.msg  LatGainScheduler.msg  LatGainSchedulerInfo.msg  LatencyStats.msg  LonControllerConf.msg  PadMessage.msg  PidConf.msg  SimpleLateralDebug.msg  SimpleLongitudinalDebug.msg  TurnSignal.msg
apollo_msgs/modules_drivers_gnss_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_drivers_gnss_msgs/msg/: BandObservation.msg  Config.msg  Constellation.msg  DatumId.msg  EpochObservation.msg  Format.msg  GPGGA.msg  GlonassOrbit.msg  Gnss.msg  GnssBandID.msg  GnssBestPose.msg  GnssEphemeris.msg  GnssRange.msg  GnssSolutionType.msg  GnssStatus.msg  GnssTimeType.msg  GnssType.msg  Imu.msg  Ins.msg  InsStat.msg  InsStatus.msg  InsStatusType.msg  InsType.msg  KepplerOrbit.msg  NovatelConfig.msg  Ntrip.msg  PseudoType.msg  RangeInfo.msg  RtkSolutionType.msg  SatelliteObservation.msg  Serial.msg  SolutionStatus.msg  SolutionType.msg  Stream.msg  StreamStatus.msg  StreamStatusType.msg  StreamType.msg  Tcp.msg  device_config.msg
apollo_msgs/modules_drivers_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_drivers_msgs/msg/: Acm_inst_req_7e0.msg  Acm_inst_resp_7e4.msg  Aftermarket_669.msg  Can_rx_auto_align_convergedType.msg  Can_rx_auto_align_disableType.msg  Can_rx_blockage_disableType.msg  Can_rx_clear_faultsType.msg  Can_rx_fac_align_cmd_1Type.msg  Can_rx_fac_align_cmd_2Type.msg  Can_rx_grouping_modeType.msg  Can_rx_lat_accel_validityType.msg  Can_rx_long_accel_validityType.msg  Can_rx_lr_only_transmitType.msg  Can_rx_mmr_upside_downType.msg  Can_rx_mr_only_transmitType.msg  Can_rx_radar_cmd_radiateType.msg  Can_rx_raw_data_enableType.msg  Can_rx_serv_align_enableType.msg  Can_rx_serv_align_typeType.msg  Can_rx_sim_functionType.msg  Can_rx_sim_statusType.msg  Can_rx_sim_track_idType.msg  Can_rx_steering_angle_rate_signType.msg  Can_rx_steering_angle_signType.msg  Can_rx_steering_angle_validityType.msg  Can_rx_turn_signal_statusType.msg  Can_rx_use_angle_misalignmentType.msg  Can_rx_vehicle_speed_directionType.msg  Can_rx_vehicle_speed_validityType.msg  Can_rx_wheel_slipType.msg  Can_rx_wiper_statusType.msg  Can_rx_yaw_rate_bias_shiftType.msg  Can_rx_yaw_rate_validityType.msg  Can_tx_factory_align_status_1Type.msg  Can_tx_factory_align_status_2Type.msg  Can_tx_found_targetType.msg  Can_tx_grouping_modeType.msg  Can_tx_internal_errorType.msg  Can_tx_lr_only_grating_lobe_detType.msg  Can_tx_mr_lr_modeType.msg  (+48 more)
apollo_msgs/modules_hmi_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_hmi_msgs/msg/: Command.msg  Component.msg  Config.msg  (+14 more)
apollo_msgs/modules_localization_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_map_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_monitor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_perception_config_manager_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_planning_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_prediction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
apollo_msgs/modules_routing_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cnnsegmentation/: CHANGELOG.rst  CMakeLists.txt  package.xml
cnnsegmentation/src/: .kdev_include_paths  cnn_segmentation.cpp  cnn_segmentation_test.cpp  feature_generator.cpp
hdmapinput/: CHANGELOG.rst  CMakeLists.txt  package.xml
hdmapinput/include/: hdmap_input.h
hdmapinput/src/: .kdev_include_paths  hdmap_input.cpp
hdmaproifilter/: CHANGELOG.rst  CMakeLists.txt  package.xml
hdmaproifilter/src/: bitmap2d.cpp  hdmap_roi_filter.cpp  hdmap_roi_filter_test.cpp  polygon_mask.cpp  polygon_scan_converter.cpp
minboxbuilder/: CHANGELOG.rst  CMakeLists.txt  package.xml
minboxbuilder/src/: min_box.cpp  min_box_test.cc
(+277 files in other folders)
