<package>
  <name>hdmapinput</name>
  <version>1.5.0</version>
  <description>
    This package defines hdmapinput library of perception with apollo
  </description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>modules_map_msgs</build_depend>
  <build_depend>modules_common_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>modules_map_msgs</run_depend>
  <run_depend>modules_common_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <export>
  </export>
</package>
