<package>
  <name>apollo_msgs</name>
  <version>1.5.0</version>
  <description>
    apollo_msgs contains messages that are widely used by other apollo modules.
  </description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>modules_calibration_republish_msgs</run_depend>
  <run_depend>modules_canbus_msgs</run_depend>
  <run_depend>modules_common_adapters_msgs</run_depend>
  <run_depend>modules_common_configs_msgs</run_depend>
  <run_depend>modules_common_monitor_msgs</run_depend>
  <run_depend>modules_common_msgs</run_depend>
  <run_depend>modules_control_msgs</run_depend>
  <run_depend>modules_drivers_gnss_msgs</run_depend>
  <run_depend>modules_drivers_msgs</run_depend>
  <run_depend>modules_hmi_msgs</run_depend>
  <run_depend>modules_localization_msgs</run_depend>
  <run_depend>modules_map_msgs</run_depend>
  <run_depend>modules_monitor_msgs</run_depend>
  <run_depend>modules_perception_msgs</run_depend>
  <run_depend>modules_perception_cnnseg_msgs</run_depend>
  <run_depend>modules_perception_config_manager_msgs</run_depend>
  <run_depend>modules_planning_msgs</run_depend>
  <run_depend>modules_prediction_msgs</run_depend>
  <run_depend>modules_routing_msgs</run_depend>



  <export>
    <metapackage/>
  </export>
</package>
