<package>
  <name>modules_planning_msgs</name>
  <version>1.5.0</version>
  <description>
    This package defines messages for apollo planning of modules
  </description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>modules_common_msgs</build_depend>
  <build_depend>modules_routing_msgs</build_depend>
  <build_depend>modules_canbus_msgs</build_depend>
  <build_depend>modules_localization_msgs</build_depend>
  <build_depend>modules_perception_config_manager_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>modules_common_msgs</run_depend>
  <run_depend>modules_routing_msgs</run_depend>
  <run_depend>modules_canbus_msgs</run_depend>
  <run_depend>modules_localization_msgs</run_depend>
  <run_depend>modules_perception_config_manager_msgs</run_depend>
  <export>
  </export>
</package>
